testament/tests/shouldfail/treject.nim
discard """
action: "reject"
"""

# test will fail because action="reject" in the config
assert true